pfparser/y.output

state 0
	$accept: .formula $end 

	LITERAL  shift 3
	'~'  shift 9
	'('  shift 10
	.  error

	formula  goto 1
	expr  goto 2
	and_expr  goto 4
	or_expr  goto 5
	not_expr  goto 7
	impl_expr  goto 6
	paren_expr  goto 8

state 1
	$accept:  formula.$end 

	$end  accept
	.  error


state 2
	formula:  expr.    (1)
	and_expr:  expr.'&' expr 
	or_expr:  expr.'|' expr 
	impl_expr:  expr.'>' expr 

	'&'  shift 11
	'|'  shift 12
	'>'  shift 13
	.  reduce 1 (src line 52)


state 3
	expr:  LITERAL.    (2)

	.  reduce 2 (src line 59)


state 4
	expr:  and_expr.    (3)

	.  reduce 3 (src line 64)


state 5
	expr:  or_expr.    (4)

	.  reduce 4 (src line 65)


state 6
	expr:  impl_expr.    (5)

	.  reduce 5 (src line 66)


state 7
	expr:  not_expr.    (6)

	.  reduce 6 (src line 67)


state 8
	expr:  paren_expr.    (7)

	.  reduce 7 (src line 68)


state 9
	not_expr:  '~'.expr 

	LITERAL  shift 3
	'~'  shift 9
	'('  shift 10
	.  error

	expr  goto 14
	and_expr  goto 4
	or_expr  goto 5
	not_expr  goto 7
	impl_expr  goto 6
	paren_expr  goto 8

state 10
	paren_expr:  '('.expr ')' 

	LITERAL  shift 3
	'~'  shift 9
	'('  shift 10
	.  error

	expr  goto 15
	and_expr  goto 4
	or_expr  goto 5
	not_expr  goto 7
	impl_expr  goto 6
	paren_expr  goto 8

state 11
	and_expr:  expr '&'.expr 

	LITERAL  shift 3
	'~'  shift 9
	'('  shift 10
	.  error

	expr  goto 16
	and_expr  goto 4
	or_expr  goto 5
	not_expr  goto 7
	impl_expr  goto 6
	paren_expr  goto 8

state 12
	or_expr:  expr '|'.expr 

	LITERAL  shift 3
	'~'  shift 9
	'('  shift 10
	.  error

	expr  goto 17
	and_expr  goto 4
	or_expr  goto 5
	not_expr  goto 7
	impl_expr  goto 6
	paren_expr  goto 8

state 13
	impl_expr:  expr '>'.expr 

	LITERAL  shift 3
	'~'  shift 9
	'('  shift 10
	.  error

	expr  goto 18
	and_expr  goto 4
	or_expr  goto 5
	not_expr  goto 7
	impl_expr  goto 6
	paren_expr  goto 8

state 14
	and_expr:  expr.'&' expr 
	or_expr:  expr.'|' expr 
	impl_expr:  expr.'>' expr 
	not_expr:  '~' expr.    (11)

	.  reduce 11 (src line 88)


state 15
	and_expr:  expr.'&' expr 
	or_expr:  expr.'|' expr 
	impl_expr:  expr.'>' expr 
	paren_expr:  '(' expr.')' 

	'&'  shift 11
	'|'  shift 12
	'>'  shift 13
	')'  shift 19
	.  error


state 16
	and_expr:  expr.'&' expr 
	and_expr:  expr '&' expr.    (8)
	or_expr:  expr.'|' expr 
	impl_expr:  expr.'>' expr 

	.  reduce 8 (src line 70)


state 17
	and_expr:  expr.'&' expr 
	or_expr:  expr.'|' expr 
	or_expr:  expr '|' expr.    (9)
	impl_expr:  expr.'>' expr 

	.  reduce 9 (src line 76)


state 18
	and_expr:  expr.'&' expr 
	or_expr:  expr.'|' expr 
	impl_expr:  expr.'>' expr 
	impl_expr:  expr '>' expr.    (10)

	.  reduce 10 (src line 82)


state 19
	paren_expr:  '(' expr ')'.    (12)

	.  reduce 12 (src line 94)


10 terminals, 8 nonterminals
13 grammar rules, 20/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 36/120000
17 extra closures
25 shift entries, 1 exceptions
12 goto entries
25 entries saved by goto default
Optimizer space used: output 22/120000
22 table entries, 0 zero
maximum spread: 10, maximum offset: 13
